style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html{
    scroll-behavior: smooth;
}
:root {
    /* Light Mode */
    --bg-color: #DBE2EF;
    --text-color: #3F72AF;
    --heading-color: #3F72AF;
    --code-color: #FFB44C;
    --build-bg: #3F72AF;
    --build-text: #DBE2EF;
    --section-bg: #f9f7f7;
    --header-scroll: #ffffff;
    --nav-hover: #112d4e; /* Dark blue for Light Mode */

    font-family: 'Poppins', sans-serif;
}

body.dark {
    /* Night Mode */
    --bg-color: #112D4E;
    --text-color: #3F72AF;
    --heading-color: #F9F7F7;
    --code-color: #FFB44C;
    --build-bg: #081424;
    --build-text: #DBE2EF;
    --section-bg: #112D4E;
    --header-scroll: #081424;
    --nav-hover: #f9f9f9; 
}

body {
    background-color: var(--section-bg);
    
    line-height: 1.6;
    /* transition: background 0.4s ease,color 0.4s ease; */
}

a {
    text-decoration: none;;
    font-size: 1.2rem;
}

ul {
    list-style: none;
}

header {
    background:transparent;
    padding: 1rem 1rem;
    top: 0;
    display: flex;
    justify-content: center;
    position:fixed;
    width: 100%;    
    transition: 0.4s;
    z-index: 1000;
    /* letter-spacing: 1px; */
}

.header-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding:0.5rem 5rem;
    max-width: 1300px;
    width: 100%;
    border-radius: 60px;
}

header.scrolled {
    background: transparent;
}

header.scrolled .header-content{
    background-color: var(--bg-color);
    color: var(--text-color);
    box-shadow:  inset 2px 2px 4px rgba(0, 0, 0, 0.5);
}
.logo {
    font-size: 1.5rem;
    padding: 0.5rem 1rem;
    font-weight: 700;
    color: var(--text-color);

}
.nav {
    display: flex;
    align-items: center;
    justify-content: center;
    /* gap: 1.5rem;
    padding-right: 2rem;  */
}

.nav div {
    margin: 0 0.5rem;
}
.nav a {
    color: var(--text-color);
    font-weight: 700;
    font-size: 1.5rem;
    margin: 0.3rem;
    padding-right: 0.8rem;
}

.nav a:hover {
    color:var(--nav-hover);
    transition: 0.3s;
}
.theme-toggle{
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
    outline: none;
    font-size: 1.5rem;
    display: flex;
    align-items: center;
    transition: trasnform 0.1s ease;
}


#theme-btn img{
    width: 30px;
    height: 30px;
}

.home {
    background: var(--section-bg);
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    padding: 2rem;
    min-height: 100vh;
    z-index: 1;
}

/* .home .head {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
} */

.home .head {
    color: var(--heading-color);
    font-size: 3rem;
    font-weight: 700;
    line-height: 1.5;
    margin-bottom: 1.5rem;
    white-space: nowrap;
    height: 5rem;

    padding-top: 12rem;
    display: flex;
    flex-direction: row;
}

.underline {
    position: relative;
    display: inline-block;
}

.underline::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -8px;
    width: 100%;
    height: 1px;
    background: var(--text-color);
} 

.home  .window {
    display: inline-block;
    /* gap: 1rem; */
    height: 4.3rem;
    overflow: hidden;
    margin-left: 1rem;
    text-align: left;
    color: var(--text-color);
    position: relative;
    
}

.window span {
    display: block;
    animation: slide 15s ease infinite alternate-reverse;
    height: 4.3rem;
}

.highlight{
    color: var(--code-color);
}
.box{
    background-color: var(--build-bg);
    color: var(--section-bg);
    font-style: italic;
    padding: 0 1rem;
}

.make {
    color: var(--nav-hover);
    font-size: 2rem;
    font-weight: 600;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
    text-align: left;
    margin-top: 20rem;
    margin-left: 2rem;
    z-index: 3;
    cursor: pointer;
    position: relative;

    width: fit-content;
}

.make::after{
    content: '';
    z-index: -1;
    display: inline-block;
    position: absolute;
    transform: translate(-90%,-10%);
    width: 20rem;
    height: 3rem;
    border-radius: 8px;
    background-color: var(--build-text);
    box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.25);
    margin-top: 0.5rem;

    pointer-events: none;
}

.make span{
    pointer-events: auto;
}
.make:hover::after {
    background-color: var(--code-color);
    box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.5);
    transition: 0.3s;
}

h2 {
    font-size: 1.5rem;
    color:var(--text-color);
    scroll-margin-top: 120px;
}
.services {
    background: #fff;
    text-align: center;
    padding: 2rem 3.75rem;
    scroll-margin-top: 180px;
    padding-top: 2.5rem;
}
.service-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 1.5rem;
    align-items: start;

    /* margin-top: 1.5rem; */
}

.card {
    background-color: #f9f9f9;
    padding: 1.5rem;
    border-radius: 8px;
    transition: 0.3s;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    border: transparent solid 1px;


}

.card:hover {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
    border: #b2afaf solid 1px;

}

.card h3 {
    margin-bottom: 1rem;
}

.card p,
.card li {
    color: #414853;
    margin-bottom: 0.5rem;
    text-align: center;

}

.service-list {
    margin-top: 0.5rem;
    /* text-align: left; */
}

.point {
    margin-bottom: 0.5rem;
    font-size: 1rem;
    color: #414853;
}

.more-content {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.4s ease;
}

.more-content.show {
    max-height: 500px;
}

.toggle-btn {
    margin-top: 1rem;
    background: none;
    border: none;
    color: #391496;
    font-weight: 600;
    cursor: pointer;
    font-size: 1rem;
    align-items: flex-start;
    display: block;
    margin: 1rem auto 0;
}

.about {
    background-color: #fff;
    text-align: center;
    padding: 1.5rem;
}

.about h2 {
    color: #150246;
    margin-bottom: 1rem;
}

.about p {
    color: #302d2d;
    font-size: 1.1rem;
    max-width: 600px;
    margin: 0 auto;
}

.contact {
    background-color: #fff;
    text-align: center;
    padding: 1.5rem;
}

form {
    max-width: 600px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

input,
textarea {
    padding: 1rem;
    border: 1px solid #949292;
    border-radius: 4px;
    font-size: 1rem;

}

 #btn {
    background-color: #2e2d80;
    color: white;
    padding: 1rem;
    border: none;
    border-radius: 30px;
    font-size: 1.5rem;
    cursor: pointer;
    font-weight: 600;
}

form button:hover {
    background-color: #150246;
    transition: 0.3s;
}

footer {
    background-color: #1e293b;
    color: #fff;
    text-align: center;
    padding: 1.5rem;
    margin-top: auto;

}

@media (max-width: 768px) {
    .header-content {
        flex-direction: column;
        gap: 1rem;

    }

    .home h1 {
        font-size: 1.8rem;
    }

    .nav a {
        gap: 1rem;
    }

}

@keyframes rise {
    from {
        transform: translateY(20px);
        opacity: 0;
    }
    to {
        transform: translateY(0);
        opacity: 1;
    }
}

@keyframes slide {
      0%, 25%   { transform: translateY(0);}
      30%, 45%  { transform: translateY(-4.3rem); }
      50%, 70%  { transform: translateY(-8.6rem); }
      75%, 95%  { transform: translateY(-12.9rem); }
      100%      { transform: translateY(0); }
    }

